[gd_scene load_steps=33 format=3 uid="uid://d38y872mxps7r"]

[ext_resource type="Script" uid="uid://c0w872ckwae16" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://m0ybwjivwhq1" path="res://assets/sprites/fall.png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://dynpm2u0sy8lr" path="res://assets/sprites/fly.png" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dn1lvhd5mpii6" path="res://assets/sprites/idle.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://wlm2nalxcp3o" path="res://assets/sprites/walk.png" id="6_fjrip"]
[ext_resource type="Texture2D" uid="uid://byq8pctn0lmfv" path="res://assets/sprites/side-attack.png" id="6_tuyoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 0, 199, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_dqkch")
region = Rect2(199, 0, 199, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_dqkch")
region = Rect2(398, 0, 199, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_dqkch")
region = Rect2(597, 0, 199, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qlg0r")
region = Rect2(0, 0, 176, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qlg0r")
region = Rect2(176, 0, 176, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qlg0r")
region = Rect2(352, 0, 176, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qlg0r")
region = Rect2(528, 0, 176, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("4_fjrip")
region = Rect2(0, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("4_fjrip")
region = Rect2(196, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("4_fjrip")
region = Rect2(392, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("4_fjrip")
region = Rect2(588, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("6_tuyoq")
region = Rect2(0, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("6_tuyoq")
region = Rect2(196, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("6_tuyoq")
region = Rect2(392, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("6_tuyoq")
region = Rect2(588, 0, 196, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("6_fjrip")
region = Rect2(0, 0, 196, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("6_fjrip")
region = Rect2(196, 0, 196, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("6_fjrip")
region = Rect2(392, 0, 196, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("6_fjrip")
region = Rect2(588, 0, 196, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("6_fjrip")
region = Rect2(784, 0, 196, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("6_fjrip")
region = Rect2(980, 0, 196, 103)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("6_fjrip")
region = Rect2(1176, 0, 196, 103)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"side-attack",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qlg0r"]
radius = 24.0
height = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tuyoq"]
radius = 34.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="MovementSprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"side-attack"
frame = 3
frame_progress = 1.0

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_qlg0r")

[node name="CollisionSideAttack" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(-58, 9)
shape = SubResource("CircleShape2D_tuyoq")
debug_color = Color(0.60804147, 0.36404154, 1, 0.41960785)

[connection signal="animation_finished" from="MovementSprites" to="." method="_on_movement_sprites_animation_finished"]
